--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -8315,7 +8315,8 @@ The following syntaxes are part of the heterogeneous logical environments:
  \item RDF-XML, supported by $\OWL$, \EL, \QL, \RL , \RDF, \RDFS
  \item OWL 2 XML, supported by $\OWL$, \EL, \QL, \RL 
  \item Manchester Syntax, supported by $\OWL$, \EL, \QL, \RL
- \item CASL, supported by \CASL
+  \item TPTP, supported by TPTP
+  \item CASL, supported by \CASL
  \item XMI, supported by UML-CD
  \item XCL, supported by \CL
  \item CLIF, supported by \CL 
