semantics of maximize, (co)free, typo

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -5763,10 +5763,10 @@ is defined similarly, only the model class differs:
 $\Mod( \syntax{maximize}\ O) = 
         \{ M \in  \Mod(O) \mid  M \text{ is maximal in } \{M' \in \Mod(O) \mid M'\forget\Sigma = M\forget\Sigma\}\}$
 \item
-$\Mod( \syntax{minimize}\ O) = 
+$\Mod( \syntax{free}\ O) = 
         \{ M \in  \Mod(O) \mid  M \text{ is initial in } \{M' \in \Mod(O) \mid M'\forget\Sigma = M\forget\Sigma\}\}$
 \item
-$\Mod( \syntax{minimize}\ O) = 
+$\Mod( \syntax{cofree}\ O) = 
         \{ M \in  \Mod(O) \mid  M \text{ is terminal in } \{M' \in \Mod(O) \mid M'\forget\Sigma = M\forget\Sigma\}\}$
 \end{itemize}
 Here, initial and terminal models are defined as in
